--- a/docs/run_QuickBurst.ipynb
+++ b/docs/run_QuickBurst.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "fa22a4fd",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_29841/956813560.py:1: DeprecationWarning: Importing display from IPython.core.display is deprecated since IPython 7.14, please import from IPython display\n"
+      "/tmp/ipykernel_9137/956813560.py:1: DeprecationWarning: Importing display from IPython.core.display is deprecated since IPython 7.14, please import from IPython display\n",
+      "  from IPython.core.display import display, HTML\n"
      ]
     },
     {
@@ -33,16 +34,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "9894cd2c",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "WARNING: version mismatch between CFITSIO header (v4.000999999999999) and linked library (v4.01).\n",
+      "\n",
+      "\n",
+      "WARNING: version mismatch between CFITSIO header (v4.000999999999999) and linked library (v4.01).\n",
+      "\n",
+      "\n",
+      "WARNING: version mismatch between CFITSIO header (v4.000999999999999) and linked library (v4.01).\n",
+      "\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
+      "Optional mpi4py package is not installed.  MPI support is not available.\n"
      ]
     }
    ],
@@ -98,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "0bc1cd8b",
    "metadata": {
     "scrolled": true
@@ -111,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "c20d9dde",
    "metadata": {
     "scrolled": true
@@ -907,7 +922,7 @@
        " 'J2322+2057_red_noise_log10_A': -17.30323104416495}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -921,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "id": "ee5140fc",
    "metadata": {},
    "outputs": [
@@ -951,10 +966,38 @@
     "t0_max = (maximum - minimum)/365/24/3600\n",
     "print(t0_max)\n",
     "\n",
-    "#for psr in psrs_total:\n",
-    "    #print(psr.name)\n",
-    "psrs= [psrs_total[1]]\n",
+    "#GET A SINGLE PULSAR TO RUN\n",
+    "psr_name = \"J1614-2240\"\n",
+    "for psr in psrs_total:\n",
+    "    if psr.name == psr_name:\n",
+    "        psrs = [psr]\n",
+    "        print(\"bruh\")\n",
+    "        break\n",
+    "\n",
+    "#GET A RANGE OF PULSARS    \n",
+    "#psrs= psrs_total[0:42]\n",
+    "\n",
     "print(psrs[0].name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "564535ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (2450445451.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[10], line 2\u001b[0;36m\u001b[0m\n\u001b[0;31m    print(i[1].name if i[1].name == \"B1937+21\")\u001b[0m\n\u001b[0m                                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in enumerate(psrs_total):\n",
+    "`    print(i[1].name if i[1].name == \"B1937+21\")`"
    ]
   },
   {
