--- a/QuickBurst/test.ipynb
+++ b/QuickBurst/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "fba68033",
    "metadata": {},
    "outputs": [
@@ -41,11 +41,30 @@
     "print(my_matrix.T)\n",
     "print(temp(my_matrix))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "426f0827",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "dir = \"/home/mitch/QuickBurstWork/QuickBurstChoStability/QuickBurst/\"\n",
+    "file_name = \"temp.json\"\n",
+    "file_path = dir + file_name\n",
+    "my_dict = {}\n",
+    "my_dict['1'] = \"hello\"\n",
+    "my_dict['second'] = 2\n",
+    "with open(file_path, \"w\") as f:\n",
+    "    json.dump(my_dict,f, indent=4)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ng20",
+   "display_name": "QuickBurst",
    "language": "python",
    "name": "python3"
   },
@@ -59,7 +78,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
